Prevent logo from blurring when reduced in size

--- a/css/main.scss
+++ b/css/main.scss
@@ -320,14 +320,18 @@ header {
     .site-title {
         float: left;
 
+        img {
+            image-rendering: -moz-crisp-edges;         /* Firefox */
+            image-rendering:   -o-crisp-edges;         /* Opera */
+            image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+            image-rendering: crisp-edges;
+            -ms-interpolation-mode: nearest-neighbor;
+        }
+
         @media only screen and (max-width: 550px) {
             float: none;
             text-align: center;
             display: block;
-
-            img {
-                max-width: 80%;
-            }
         }
     }
 
